[workspace]
members = [
    "common",
    "benchmarks/sqlite",
    "benchmarks/duckdb",
    "benchmarks/surrealdb",
   #  "benchmarks/kuzu",
   #  "benchmarks/postgres",
    "benchmarks/rocksdb",
]

[workspace.dependencies]
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
axum = "0.7.4"
chrono = { version = "0.4.35", features = ["serde"] }
uuid = { version = "1.7.0", features = ["v4", "serde"] }
rand = "0.8.5"
criterion = { version = "0.5.1", features = ["html_reports"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
dotenvy = "0.15.7"
anyhow = "1.0.79"
thiserror = "1.0.57"
async-trait = "0.1.77" 