[package]
name = "benchmarks-duckdb"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../../common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
duckdb = { version = "0.9.2", features = ["bundled"] }
tokio-executor-trait = "2.1.1"
futures = "0.3.30" 