[package]
name = "benchmarks-rocksdb"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../../common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
rocksdb = { version = "0.21.0", features = ["multi-threaded-cf"] }
bincode = "1.3.3"
futures = "0.3" 